// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketStatus component closed ticket 1`] = `
<span
  id="change-status-button"
>
  <button
    aria-disabled="false"
    class="wrapper wrapper small fill primary small"
    type="button"
  >
    <span
      class="content"
    >
      <i
        class="material-icons icon"
      >
        check
      </i>
    </span>
  </button>
</span>
`;

exports[`TicketStatus component open ticket 1`] = `
<span
  id="change-status-button"
>
  <button
    aria-disabled="false"
    class="wrapper fill secondary small"
    type="button"
  >
    <i
      aria-hidden="true"
      class="material-icons icon small"
    >
      check
    </i>
    <span
      class="content"
    >
      Close
    </span>
  </button>
</span>
`;
